syntax = "proto3";

option go_package = "sigmaos/cache/proto";

service Cache {
  rpc Get(CacheRequest) returns (CacheResult);
  rpc Set(CacheRequest) returns (CacheResult);
}

message CacheRequest {
  string key = 1;
  bytes value = 2;
}

message CacheResult {
  bytes value = 1;
}

message CacheDump {
  map<string, bytes> vals = 1;
}

message CacheString {
  string val = 1;
}

message CacheInt {
  int64 val = 1;
}
